--- a/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Random_Recipe_Finder_MAUI_APP</a>
+        <a class="navbar-brand" href="">Random Recipe Finder</a>
     </div>
 </div>
 
