Add RecipeView navigation and API integration
- Updated NavMenu.razor to include a new link for RecipeView.
- Modified RecipeView.razor to display recipe details and fetch data from the API.
- Changed MAIN_URL_ENPOINT in RecipeApiService.cs to use a secure HTTPS URL.

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/RecipeView.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/RecipeView.razor
@@ -1,4 +1,7 @@
 ﻿@using Random_Recipe_Finder_MAUI_APP.Models
+@using Random_Recipe_Finder_MAUI_APP.Services
+@inject IRecipeApiService RecipeApiService
+@page "/recipeview"
 <h3>RecipeView</h3>
 
 <img src="@recipe.StrMealThumb" alt="recipe image" />
@@ -10,5 +13,10 @@
 
 @code {
     private Recipe recipe;
+    protected override async Task OnInitializedAsync()
+    {
+        var res = await RecipeApiService.SearchRecipeByName("a");
+        recipe = res[0];
+    }
 
 }
