--- a/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
@@ -13,5 +13,10 @@
                 <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="recipeview">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> RecipeView
+            </NavLink>
+        </div>
     </nav>
 </div>
