Refactor recipe handling and API request logic
Updated `RecipeView.razor` to make the `recipe` variable a public property and added initialization logic to fetch a recipe by name. Modified `RecipeApiService.cs` to change `HttpClient` initialization, removing the base address and constructing the API request URL using `Path.Combine` for improved clarity and functionality.

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/RecipeView.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/RecipeView.razor
@@ -11,10 +11,13 @@
 <p>@recipe.StrInstructions</p>
 <p>@recipe.StrTags</p>
 
+
 @code {
-    private Recipe recipe;
+    public Recipe recipe;
+
     protected override async Task OnInitializedAsync()
     {
+        recipe = new Recipe();
         var res = await RecipeApiService.SearchRecipeByName("a");
         recipe = res[0];
     }
