Enhance recipe display and data structure
Updated `RecipeView.razor` to show the first ingredient and measurement of a recipe. Added `Ingredients` and `Measurements` properties in `Recipe.cs` to provide structured access to all recipe ingredients and measurements.

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/RecipeView.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/RecipeView.razor
@@ -11,6 +11,8 @@
 <p>@recipe.StrInstructions</p>
 <p>@recipe.StrTags</p>
 
+<h4>Ingredients:@recipe.Ingredients[0]</h4>
+<h4>Measures:@recipe.Measurements[0]</h4>
 
 @code {
     public Recipe recipe;
@@ -20,6 +22,7 @@
         recipe = new Recipe();
         var res = await RecipeApiService.SearchRecipeByName("a");
         recipe = res[0];
+
     }
 
 }
