--- a/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
@@ -14,8 +14,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="recipeview">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> RecipeView
+            <NavLink class="nav-link" href="searchrecipeview">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> SearchRecipe
             </NavLink>
         </div>
     </nav>
