--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
@@ -1,5 +1,31 @@
 ﻿@page "/"
+@using Random_Recipe_Finder_MAUI_APP.Services
+@inject IShakeService ShakeService
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
+
+
+@code {
+
+    protected override void OnInitialized()
+    {
+        if (ShakeService != null)
+        {
+            if (ShakeService.IsRunning())
+            {
+                ShakeService.SubscribeToShakeEvent(ShakeService_ShakeDetected);
+            }
+            else
+            {
+                ShakeService.StartShakeService();
+                ShakeService.SubscribeToShakeEvent(ShakeService_ShakeDetected);
+            }
+        }
+    }
+    private void ShakeService_ShakeDetected(object sender, EventArgs e)
+    {
+        Console.WriteLine("Shake Detected");
+    }
+}
