Replace ShakeService with Accelerometer for shake detection
Updated `Home.razor` to utilize the `Accelerometer` class for detecting shake events. The initialization now checks for `Accelerometer` support and manages its monitoring state. The shake detection event handler has been modified to use `AccelerometerChangedEventArgs`.

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
@@ -11,20 +11,37 @@ Welcome to your new app.
 
     protected override void OnInitialized()
     {
-        if (ShakeService != null)
+
+
+        if (Accelerometer.Default.IsSupported)
         {
-            if (ShakeService.IsRunning())
+            if (!Accelerometer.Default.IsMonitoring)
             {
-                ShakeService.SubscribeToShakeEvent(ShakeService_ShakeDetected);
+                Accelerometer.Default.ReadingChanged += ShakeService_ShakeDetected;
+                Accelerometer.Default.Start(SensorSpeed.UI);
             }
             else
             {
-                ShakeService.StartShakeService();
-                ShakeService.SubscribeToShakeEvent(ShakeService_ShakeDetected);
+                Accelerometer.Default.Stop();
+                Accelerometer.Default.ReadingChanged += ShakeService_ShakeDetected;
             }
+
         }
+
+        // if (ShakeService != null)
+        // {
+        //     if (ShakeService.IsRunning())
+        //     {
+        //         ShakeService.SubscribeToShakeEvent(ShakeService_ShakeDetected);
+        //     }
+        //     else
+        //     {
+        //         ShakeService.StartShakeService();
+        //         ShakeService.SubscribeToShakeEvent(ShakeService_ShakeDetected);
+        //     }
+        // }
     }
-    private void ShakeService_ShakeDetected(object sender, EventArgs e)
+    private void ShakeService_ShakeDetected(object sender, AccelerometerChangedEventArgs e)
     {
         Console.WriteLine("Shake Detected");
     }
