commented out the shakeservice

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 @using Random_Recipe_Finder_MAUI_APP.Services
-@inject IShakeService ShakeService
+@* @inject IShakeService ShakeService *@
 
 <h1>Hello, world!</h1>
 
