--- a/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Layout/NavMenu.razor
@@ -23,5 +23,10 @@
                 <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> RandomRecipe
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="viewfavorites">
+                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> ViewFavorites
+            </NavLink>
+        </div>
     </nav>
 </div>
