--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/RandomRecipeView.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/RandomRecipeView.razor
@@ -36,9 +36,12 @@
     <div class="recipe-ingredients">
         <h4>Ingredients</h4>
         <ul>
-            @for (int i = 0; i < recipe.Ingredients.Count; i++)
+            @if(recipe.Ingredients != null)
             {
-                <li>@recipe.Ingredients[i] - @recipe.Measurements[i]</li>
+                @for (int i = 0; i < recipe.Ingredients.Count; i++)
+                {
+                        <li>@recipe.Ingredients[i] - @recipe.Measurements[i]</li>
+                }
             }
         </ul>
     </div>
