Added if to ingredients in SearchRecipeView.razor

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/SearchRecipeView.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/SearchRecipeView.razor
@@ -44,9 +44,11 @@
             <div class="recipe-ingredients">
                 <h4>Ingredients</h4>
                 <ul>
-                  @for (int i = 0; i < recipe.Ingredients.Count; i++)
-                    {
-                        <li>@recipe.Ingredients[i] - @recipe.Measurements[i] </li>
+                    @if (recipe.Ingredients != null && recipe.Measurements != null){
+                        @for (int i = 0; i < recipe.Ingredients.Count; i++)
+                        {
+                            <li>@recipe.Ingredients[i] - @recipe.Measurements[i] </li>
+                        }
                     }
                 </ul>
             </div>
