Add loading state to recipe views
Introduce a loading indicator in `RandomRecipeView.razor`
and disable the search button in `SearchRecipeView.razor`
while data is being fetched. Added `isLoading` variable
to enhance user experience by indicating loading status.

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/SearchRecipeView.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/SearchRecipeView.razor
@@ -6,8 +6,14 @@
 
 <div class="search-container">
     <input @bind="searchQuery" placeholder="Search for a recipe..." />
-    <button @onclick="SearchRecipes">Search</button>
+    <button @onclick="SearchRecipes" disabled="@isLoading">Search</button>
+
 </div>
+@if (isLoading)
+{
+    <div class="loading-indicator">Loading...</div>
+}
+
 
 @if (recipes != null && recipes.Count > 0)
 {
@@ -84,6 +90,7 @@
     private string searchQuery="";
     private List<Recipe> recipes = new List<Recipe>();
     private HashSet<int> favoriteRecipeIds = new HashSet<int>();
+    private bool isLoading = false;
 
     protected override async Task OnInitializedAsync()
     {
@@ -98,11 +105,13 @@
 
     private async Task SearchRecipes()
     {
+        isLoading = true;
         var res = await RecipeApiService.SearchRecipeByName(searchQuery);
         if (res != null && res.Count > 0)
         {
             recipes = res;
             await LoadFavorites();
+            isLoading = false;
             StateHasChanged();
         }
     }
