--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/RandomRecipeView.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/RandomRecipeView.razor
@@ -40,16 +40,22 @@
             {
                 @for (int i = 0; i < recipe.Ingredients.Count; i++)
                 {
-                        <li>@recipe.Ingredients[i] - @recipe.Measurements[i]</li>
+                    <li>@recipe.Ingredients[i] - @recipe.Measurements[i]</li>
                 }
             }
         </ul>
     </div>
+    @if (isLoading)
+    {
+        <div class="loading-indicator">Loading...</div>
+    }
 </div>
+
 
 @code {
     private Recipe recipe = new Recipe();
     private bool isFavorite = false;
+    private bool isLoading = false;
 
     protected override async Task OnInitializedAsync()
     {
@@ -58,8 +64,10 @@
 
     private async Task LoadRandomRecipe()
     {
+        isLoading = true;
         recipe = await RecipeApiService.GetRandomRecipe();
         await CheckIfFavorite();
+        isLoading = false;
     }
 
     private async Task CheckIfFavorite()
