Add shake gesture detection using accelerometer
Implement functionality to detect shake gestures with an accelerometer. Introduce a boolean variable `isShaking` to track the shake state. On initialization, check for accelerometer support and start monitoring for shake events. Update the UI to reflect the shake state and display a message when shaking is detected.

--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
@@ -6,10 +6,39 @@
 
 Welcome to your new app.
 
+@if (isShaking)
+{
+    <p>Is Shaking</p>
+}
+
 
 @code {
+
+    bool isShaking = false;
+
     protected override void OnInitialized()
     {
-        
+        IAccelerometer accelerometer = Accelerometer.Default;
+
+        if (accelerometer.IsSupported)
+        {
+            if (!accelerometer.IsMonitoring)
+            {
+                accelerometer.ShakeDetected += ShakeDetected;
+                accelerometer.Start(SensorSpeed.UI);
+            }
+            else
+            {
+                accelerometer.Stop();
+                accelerometer.ShakeDetected -= ShakeDetected;
+            }
+        }
     }
+
+    public void ShakeDetected(object sender, EventArgs e)
+    {
+        isShaking = !isShaking;
+        StateHasChanged();
+    }
+    
 }
