--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/Home.razor
@@ -1,16 +1,11 @@
 ﻿@page "/"
 @using Random_Recipe_Finder_MAUI_APP.Services
 @inject IShakeService ShakeService
+@inject NavigationManager navigationManager
 
 <h1>Hello, world!</h1>
 
 Welcome to your new app.
-
-@if (isShaking)
-{
-    <p>Is Shaking</p>
-}
-
 
 @code {
 
@@ -24,8 +19,7 @@ Welcome to your new app.
 
     public void ShakeDetected(object sender, EventArgs e)
     {
-        isShaking = !isShaking;
-        StateHasChanged();
+        navigationManager.NavigateTo("/randomrecipeview");
     }
     
 }
