--- a/Random_Recipe_Finder_MAUI_APP/Components/Pages/ViewFavorites.razor
+++ b/Random_Recipe_Finder_MAUI_APP/Components/Pages/ViewFavorites.razor
@@ -22,6 +22,7 @@ else
                 <div class="recipe-details">
                     <p><strong>Category:</strong> @recipe.StrCategory</p>
                     <p><strong>Area:</strong> @recipe.StrArea</p>
+                    <p><strong>Tags:</strong> @((MarkupString)FormatTags(recipe.StrTags))</p>
                 </div>
 
                 <!-- Remove Favorite Button -->
@@ -69,5 +70,23 @@ else
             await DatabaseHelper.DeleteRecipeAsync(recipeToRemove);
             favoriteRecipes.Remove(recipeToRemove);
         }
+    }
+    private string FormatTags(string tags)
+    {
+        if (string.IsNullOrEmpty(tags))
+        {
+            return string.Empty;
+        }
+
+        var tagList = tags.Split(',');
+        for (int i = 2; i < tagList.Length; i += 3)
+        {
+            if (tagList[i].Length >= 10)
+            {
+                tagList[i] = "<br />" + tagList[i];
+            }
+        }
+
+        return string.Join(", ", tagList);
     }
 }
